Not sure if images will be too big now, but they have a width of 100% on mobile. Fixes #6.

--- a/src/views/NewsView/NewsView.scss
+++ b/src/views/NewsView/NewsView.scss
@@ -6,7 +6,11 @@
   img {
     margin-bottom: 1rem;
     max-width: 100%;
-    width: auto;
+    width: 100%;
+
+    @media (min-width: 544px) {
+      width: auto;
+    }
   }
 }
 
